--- a/_config.yml
+++ b/_config.yml
@@ -7,10 +7,15 @@ description: > # ignore newlines
 #baseurl: "" # the subpath of your site, e.g. /blog
 #url: "http://yourdomain.com" # the base hostname & protocol for your site
 
+
+
 # Build settings
 markdown: kramdown
 gems:
   - jekyll-paginate
+  - jekyll-sitemap
+  - jekyll-redirect-from
+  - jekyll-seo-tag
 paginate: 4
 paginate_path: "/blog/page:num/"
 
