Added catagories and tags, check _post/template.md for instructions

--- a/_config.yml
+++ b/_config.yml
@@ -8,6 +8,16 @@ description: > # ignore newlines
 #url: "http://yourdomain.com" # the base hostname & protocol for your site
 
 
+collections:
+  categories:
+    output: true
+    permalink: /blog/categories/:path/
+
+defaults:
+  - scope:
+      type: categories
+    values:
+      layout: category
 
 # Build settings
 markdown: kramdown
