--- a/_config.yml
+++ b/_config.yml
@@ -21,6 +21,8 @@ defaults:
 
 # Build settings
 markdown: kramdown
+kramdown:
+  smart_quotes:   lsquo,rsquo,ldquo,rdquo
 gems:
   - jekyll-paginate
   - jekyll-sitemap
